# hefhs-standard

./: .gitignore  AGENTS.md  AGENTS_EN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  EXAMPLES.md  HEFHS_ENGLISH_PROPOSAL.md  PROMOTION_HN.md  PROMOTION_LINKEDIN.md  PROMOTION_X_THREAD.md  README.md  hefhs_validator.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
project_scaffold/: README.md  main.py  pyproject.toml
project_scaffold/agent/: __init__.py
project_scaffold/agent/assistant/: config.yaml
project_scaffold/config/: default.yaml
project_scaffold/context/: __init__.py
project_scaffold/memory/: __init__.py
project_scaffold/state/: __init__.py
project_scaffold/tool/: __init__.py
project_scaffold/tool/web_search/: __init__.py  schema.json
